Possible fix for the subscription bug.